2013-04-08 Hirofumi Kosaka <kosaka@rworks.jp>

	* util/tentacle_serverd: Tiny improvement. Changed to use
	target process id to check if the process has been stopped.

2013-04-08 Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_server: Small improvement. Pinned target
	process id to be killed when stopping Pandora Server, to avoid
	to kill other processes that could be invoked in different
	session by chance.

2013-04-07  Junichi Satoh <junichi@rworks.jp>

	* Makefile.PL: Changed library installation path for NetBSD.

	* pandora_server_installer: Fixed wrong permission of tentacle_server
	for BSD.

2013-04-04  Junichi Satoh <junichi@rworks.jp>

	* pandora_server_installer: As the same as Linux, changed cron setting
	of maintenance process for BSD to hourly.
	
2013-04-03  Junichi Satoh <junichi@rworks.jp>

	* pandora_server_installer, Makefile.PL: Added support for NetBSD.

	* NetBSD/pandora_server, NetBSD/pandora_server.conf,
	NetBSD/tentacle_server: Added launcher scripts and configuration
	file for NetBSD.

	Contributed by Hiroki SHIMIZU. Thanks!

2013-04-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added a suffix to the auto-monitoring XML
	  so that it does not conflict with a local agent.

	* util/pandora_manage.pl: Fixed a couple of bugs.

2013-04-02  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Added group ACL to 'Special days list'.
	It is applied when group id is 0 (All) or the same as alert
	template's group id.

2013-04-01  Sancho Lerena <slerena@artica.es>

	* DEBIAN/postinst,
	pandora_server.redhat.spec,
	pandora_server.spec,
	pandora_server_installer: Moved maintance process to hourly
	instead daily. Improves performance and avoid locks on heavy 
	loaded systems.

2013-03-26  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/Tools.pm,
	  lib/PandoraFMS/DataServer.pm,
	  lib/PandoraFMS/ReconServer.pm,
	  bin/pandora_server: Improved pandora_get_os to support custom operating