@@ -1,3 +1,11 @@
+2013-04-17  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/WMIServer.pm: Style fix.
+
+	* lib/PandoraFMS/Core.pm,
+	  lib/PandoraFMS/DataServer.pm: Added support for multiple ip
+	  addresses.
+
 2013-04-08 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* util/tentacle_serverd: Tiny improvement. Changed to use
